# aoc2024

./: .editorconfig  .gitignore  Cargo.toml  Justfile
crates/aoc2024/: Cargo.toml
crates/aoc2024-core/: Cargo.toml
crates/aoc2024-core/src/: counter.rs  lib.rs
crates/aoc2024/src/: main.rs
crates/aoc2024/src/problem/: mod.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs
