[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "warn"

[workspace.dependencies]
aoc2024-core = { path = "crates/aoc2024-core" }

itertools = { version = "0.13.0" }
regex = { version = "1.11.1" }
sscanf = { version = "0.4.2" }
